Fix non-anti-aliased frame update.

m_contentsCangeCommitted (now renamed to m_contentsChangeResolved) was
not getting set on non-anti-aliased DrawingBuffers, causing us to always
skip setting m_animationFrameInProgress to true. This in turn skips
calling glReadPixels() for CPU-composited frames.

BUG=707298,608873
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2793653002
Cr-Commit-Position: refs/heads/master@{#461542}

Former-commit-id: 5f8b467781b1b08d611e1d05f31c10dee5538edb